Adicionando o footer da página

--- a/style.css
+++ b/style.css
@@ -4,9 +4,11 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    border: none;
 }
 
 body{
+    font-family: 'Roboto', sans-serif;
     background-image: url(./images/people.jpg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -83,37 +85,46 @@ select{
     color: white;
 }
 
+/* ponteiro muda no botão */
 #button:hover{
     cursor: pointer;
 }
 
-.contEnd{
-    background-color: rgb(41, 41, 41);
+/*footer*/
+.footerCont{
+    background-color: rgb(50, 49, 49);
+    width: 100vw;
+    height: 50vh;
+    display: flex; /* Itens lado a lado*/
+    justify-content: center;    /*eixo x*/
+    align-items: center;        /*eixo y */
+}
+
+/* container do footer */
+.containerFoot{
     color: white;
-    height: 60vh;
-    width: 100%;
+    width: 45vw;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
 }
 
+/* descrição do palestrante */
 .description{
-    height: 60vh;
-    width: 60vw;
-    margin: auto;
-    padding-top: 40px;
-}
-
-.face{
-    height: 250px;
+    text-align: left;
+    width: 30vw;
+    margin-left: 20px;
 }
 
 .description > h2{
-    position: relative;
-    left: 30%;
-    bottom: 67%;
+    font-size: 28   px;
 }
 
 .description > p{
-    width: 320px;
-    position: relative;
-    left: 30%;
-    bottom: 60%;
+    font-size: 16px;
+}
+
+/* foto do palestrante */
+.face{
+    height: 230px;
 }
